# img_user

./: .env  Cargo.toml  README.md
.cargo/: config.toml
prisma/: schema.prisma
src/: env.rs  error.rs  main.rs  prisma.rs  routes.rs  state.rs
src/helpers/: id.rs
src/img_user/: mod.rs
src/img_user/controller/: add_cids.rs  create.rs  get.rs  mod.rs
src/img_user/model/: request.rs  response.rs
src/img_user/service/: mod.rs
