[package]
name = "img-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["prisma-cli"]
resolver = "2"
[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde = "1.0.197"
argon2 = { version = "0.5.2", features = ["std"] }

axum = { version = "0.7.4" }
axum_typed_multipart = "0.11.0"
axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tower-http = { version = "0.5.1", features = ["cors"] }
http-serde = "2.0.0"
serde_json = "1.0.114"
thiserror = "1.0.57"
fancy-regex = "0.13.0"
validator = { version = "0.16.1", features = ["derive"] }
dotenvy = "0.15.7"
dotenv = "0.15.0"
tokio-util = { version = "0.7.10", features = ["io"] }
tokio = {version = "1.36.0", features = ["rt-multi-thread", "macros"]}
